file(RELATIVE_PATH CURRENT_RELATIVE_PATH "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}")

set(MODULE_DOC_CLASSES
	GridMap
	GridMapEditorPlugin
)
set(MODULE_DOC_CLASS_PATH "${CURRENT_RELATIVE_PATH}/doc_classes")

foreach(DOC_CLASS ${MODULE_DOC_CLASSES})
	list(APPEND DOC_CLASS_PATHS "${DOC_CLASS},${MODULE_DOC_CLASS_PATH}")
endforeach()

set(DOC_CLASS_PATHS ${DOC_CLASS_PATHS} PARENT_SCOPE)
list(APPEND ICON_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/icons)
set(ICON_PATHS ${ICON_PATHS} PARENT_SCOPE)

if (NOT DISABLE_3D)
	add_library(rex_module_${MODULE_NAME} STATIC)
	set(MODULE_IS_ENABLED ON PARENT_SCOPE)

	file(GLOB GRIDMAP_SOURCES *.cpp)
	target_sources(rex_module_${MODULE_NAME} PRIVATE
		${GRIDMAP_SOURCES}
	)
	if (EDITOR_BUILD)
		file(GLOB GRIDMAP_EDITOR_SOURCES editor/*.cpp)
		target_sources(rex_module_${MODULE_NAME} PRIVATE
			${GRIDMAP_EDITOR_SOURCES}
		)
	endif()
endif()
