add_library(rex_module_${MODULE_NAME} STATIC)
set(MODULE_IS_ENABLED ON PARENT_SCOPE)

file(GLOB INTERACTIVE_MUSIC_SOURCES *.cpp)
target_sources(rex_module_${MODULE_NAME} PRIVATE
	${INTERACTIVE_MUSIC_SOURCES}
)
if (EDITOR_BUILD)
	file(GLOB INTERACTIVE_MUSIC_EDITOR_SOURCES editor/*.cpp)
	target_sources(rex_module_${MODULE_NAME} PRIVATE
		${INTERACTIVE_MUSIC_EDITOR_SOURCES}
	)
endif()
